ingress-front-dao.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-front-dao
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - dao.metademocracia.social
    secretName: metademocracia-tls
  rules:
    - host: dao.metademocracia.social
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-dao-service
                port:
                  number: 80
